<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:background="?android:attr/selectableItemBackground"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/numeroSequencialTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/numeroSequencial"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/qtdEpisodiosTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/anoLancamento"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@id/anoLancamentoTv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/numeroSequencialTv" />

    <TextView
        android:id="@+id/anoLancamentoTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/qtdEpisodios"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/qtdEpisodiosTv"
        app:layout_constraintTop_toBottomOf="@id/numeroSequencialTv" />
</androidx.constraintlayout.widget.ConstraintLayout>